# cpp_and_c_exercise

./: .gitignore  CMakeLists.txt
CLanguage/: string与substring的判断.c  string的题目.c  二元一次方程求解.c  作业题目.c  对应数字输出读音.c  课堂作业临时.c
Cplus和ACMExerxise/: N个数求和分数版.cpp  calculate24.cpp  guessPrice.cpp  setstackComputer.cpp  分数精确运算.cpp  工资输出.cpp  水仙花数.cpp  走迷宫类简单版.cpp
Cplus和ACM练习/: cantor表.cpp  combination.cpp  kingOfKaraoke.cpp  square.cpp  temp.cpp  千问给出的范例.cpp  孪生素数.cpp  泰勒级数解cos.cpp  纸牌游戏.cpp  蛇形输出动态分配.cpp
C语言上/: 冒泡排序（ASCIII码字符）.c  单循环用于阶乘累加.c  字符串中字符输出.c  字符串字符替换.c  沙漏.c
LuoGuProblem/: AandBEercise.c  B2087.cpp  B2139 (2).cpp  B2141.cpp  B2165.cpp  B3690.cpp  B4548.cpp  P1007.cpp  P1030.cpp  P1034.cpp  P1036.cpp  P1042.cpp  P1047.cpp  P1085.cpp  P1089.cpp  P1093.cpp  P1150.cpp  P1151.cpp  P1152.cpp  P1161.cpp  P1179.cpp  P1200.cpp  P1304.cpp  P1307.cpp  P16208.cpp  P17088.cpp  P1961.cpp  P2525.cpp  P5707.cpp  三连击.数字.c  马里奥图片字符输出.c
LuoGuProblem/.cph/: .B2087.cpp_fa9bbd1b0bac4aabd6c8f7bc07d0a133.prob  .B4548.cpp_52fb1169747ce73eeb0bcc8e8f8284e4.prob
code_force/: AntimedianDeletion.cpp  PermutationProblem.cpp  aNumberBetweenTwo.cpp  biggestSum.cpp  boyOrGirl.cpp  countingSort.cpp  courseWishes.cpp  filpTheBit.cpp  theEqualizer.cpp
洛谷题目/: B2005字符三角形.cpp  B2127求完全数.cpp  B2139区间内真素数.cpp  P1002过河卒.cpp  P1010幂次方.cpp  P1011车站.cpp  P1014cantor表.cpp  P1016旅行家的预算.cpp  P1017进制转换.cpp  P1018乘积最大.cpp  P1033.cpp  P1035级数求和.cpp  P1037产生数.cpp  P1048.cpp  P1049装箱问题.cpp  P16336.cpp  P1802.cpp  Qwendemo.c  p1028.cpp  回文数P1015.cpp  阶乘之和.c
洛谷题目/.cph/: .P1048.cpp_99cea59be50d7b37f138f7a2f2748d9f.prob
